<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="Connect" />

    <EditText
        android:id="@+id/chat_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chat_textview"
        android:layout_toStartOf="@+id/send_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:hint="message"
        android:textSize="20dp" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chat_textview"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"
        android:text="Send" />

    <TextView
        android:id="@+id/chat_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_button"
        android:padding="20dp"
        android:textSize="14dp" />

</RelativeLayout>