<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/homepage_drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/active_listing_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#E1E1E1"
            app:cardCornerRadius="100dp"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Active listings"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#646464"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/trading_chat_cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#E1E1E1"
            app:cardCornerRadius="100dp"
            android:layout_margin="10dp"
            android:layout_toRightOf="@id/active_listing_cardview">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trading Chat"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#646464"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homepage_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/active_listing_cardview" />

        <androidx.cardview.widget.CardView
            android:id="@+id/homepage_create_listing_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            app:cardBackgroundColor="@color/purple_700"
            app:cardCornerRadius="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text=" Create Listing "
                android:textAlignment="center"
                android:textColor="#E1E1E1"
                android:textStyle="bold"
                android:textSize="18dp"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/homepage_nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/navigation_header"
            app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
