...
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_register"
                android:layout_centerHorizontal="true"
                android:text="— OR —"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/or_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:text="Login" />
...
