<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.CreateListingActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#E1E1E1"
        app:cardCornerRadius="25dp"
        android:layout_margin="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="Upload the item's image:"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:id="@+id/create_listing_upload_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/purple_700"
                    app:cardCornerRadius="100dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text=" Select Image "
                        android:textAlignment="center"
                        android:textColor="#E1E1E1"
                        android:textStyle="bold"
                        android:textSize="18dp"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:id="@+id/create_listing_path_text"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="Enter the item's title:"/>
            <EditText
                android:id="@+id/create_listing_title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="Enter the item's description:"/>
            <EditText
                android:id="@+id/create_listing_description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="Enter the item's price:"/>
            <EditText
                android:id="@+id/create_listing_price_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <androidx.cardview.widget.CardView
                    android:id="@+id/create_listing_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/purple_700"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="25dp"
                    app:cardCornerRadius="100dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text=" Cancel "
                        android:textAlignment="center"
                        android:textColor="#E1E1E1"
                        android:textStyle="bold"
                        android:textSize="18dp"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/create_listing_create_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/purple_700"
                    android:layout_marginTop="25dp"
                    app:cardCornerRadius="100dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text=" Create Listing "
                        android:textAlignment="center"
                        android:textColor="#E1E1E1"
                        android:textStyle="bold"
                        android:textSize="18dp"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>